[gd_scene load_steps=8 format=2]

[ext_resource path="res://imagens/Image Sprites/explosion3.png" type="Texture" id=1]
[ext_resource path="res://imagens/Image Sprites/explosion4.png" type="Texture" id=2]
[ext_resource path="res://imagens/Image Sprites/explosion2.png" type="Texture" id=3]
[ext_resource path="res://imagens/Image Sprites/explosion5.png" type="Texture" id=4]
[ext_resource path="res://Cenas/Efeitos/Ship_Explosion.gd" type="Script" id=5]
[ext_resource path="res://Musica/Efeitos sonoros/enemy_explosion.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Ship_Explosion" type="Node2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 5 )

[node name="Explosion1" type="AnimatedSprite" parent="."]
position = Vector2( -7.06383, -4.69124 )
scale = Vector2( 0.460777, 0.460777 )
frames = SubResource( 1 )
playing = true

[node name="Explosion2" type="AnimatedSprite" parent="."]
position = Vector2( 9.27462, 2.10297 )
scale = Vector2( 0.460777, 0.460777 )
frames = SubResource( 1 )
frame = 1

[node name="Explosion3" type="AnimatedSprite" parent="."]
position = Vector2( -9.65209, 11.3237 )
scale = Vector2( 0.460777, 0.460777 )
frames = SubResource( 1 )
frame = 1

[node name="Explosion4" type="AnimatedSprite" parent="."]
scale = Vector2( 0.500265, 0.500265 )
frames = SubResource( 1 )
frame = 3
speed_scale = 0.5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0
pitch_scale = 1.3
bus = "Musica_Opc"
[connection signal="animation_finished" from="Explosion1" to="." method="_on_Explosion1_animation_finished"]
[connection signal="animation_finished" from="Explosion2" to="." method="_on_Explosion2_animation_finished"]
[connection signal="animation_finished" from="Explosion3" to="." method="_on_Explosion3_animation_finished"]
[connection signal="animation_finished" from="Explosion4" to="." method="_on_Explosion4_animation_finished"]
